--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <title>Starting Redux</title>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/flexboxgrid/6.3.0/flexboxgrid.min.css" type="text/css">
+  <style>
+    body {
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
   <div id="app"></div>
